--- a/app/templates/layouts/main.twig
+++ b/app/templates/layouts/main.twig
@@ -33,8 +33,8 @@
 
         <noscript>
             <link rel="stylesheet" href="{{ baseUrl }}/assets/css/font-awesome.min.css">
-            <link rel="stylesheet" href="{{ baseUrl }}/assets/css/bulma.min.css">
         </noscript>
+        <link rel="stylesheet" href="{{ baseUrl }}/assets/css/bulma.min.css">
         <!--<link rel="stylesheet" href="{#{ baseUrl }#}/assets/css/main.css">-->
         <!--<link rel="stylesheet" href="{#{ baseUrl }#}/assets/css/font-awesome.min.css" media="none"
              onload="if(media!='all')media='all'">-->
@@ -125,15 +125,29 @@
 
         {% block content %}{% endblock %}
 
+        <footer class="footer">
+            <div class="container">
+                <div class="content has-text-centered">
+                    <p>
+                        <strong>ConcaEventi</strong> by <a href="https://github.com/pasqenr">Enrico Pasquali</a>.
+                        The source code is licensed
+                        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL-3.0</a>. The website content
+                        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
+                        Version: RC2.
+                    </p>
+                    <p>
+                        <a class="icon" href="https://github.com/pasqenr/concaeventi">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </footer>
+
         <!--<script src="{#{ baseUrl }#}/assets/js/main.js" async></script>-->
 
         <script type="text/javascript" async defer>
-            var link = document.createElement('link')
-            link.setAttribute('rel', 'stylesheet')
-            link.setAttribute('type', 'text/css')
-            link.setAttribute('href', '{{ baseUrl }}/assets/css/bulma.min.css')
-            document.getElementsByTagName('head')[0].appendChild(link)
-
+            /* Defer the loading of font-awesome that slow down the site */
             link = document.createElement('link')
             link.setAttribute('rel', 'stylesheet')
             link.setAttribute('type', 'text/css')
