Fix Cancel buttons that now doesn't send the form

--- a/app/templates/events/create.twig
+++ b/app/templates/events/create.twig
@@ -103,7 +103,7 @@
                                 <button class="button is-primary">Crea</button>
                             </div>
                             <div class="control">
-                                <button class="button is-light">Annulla</button>
+                                <p class="button is-light" onclick="goBack();">Annulla</p>
                             </div>
                         </div>
 
@@ -114,7 +114,6 @@
                 </div>
                 <div class="column"></div>
             </div>
-
         </div>
     </section>
 {% endblock %}
