--- a/app/templates/events/page.twig
+++ b/app/templates/events/page.twig
@@ -37,7 +37,7 @@
                                 <button class="button is-primary">Modifica</button>
                             </div>
                             <div class="control">
-                                <button class="button is-light">Annulla</button>
+                                <p class="button is-light" onclick="goBack();">Annulla</p>
                             </div>
                         </div>
 
@@ -48,7 +48,6 @@
                 </div>
                 <div class="column"></div>
             </div>
-
         </div>
     </section>
 {% endblock %}
