--- a/app/templates/associations/create.twig
+++ b/app/templates/associations/create.twig
@@ -50,7 +50,7 @@
                                 <button class="button is-primary">Crea</button>
                             </div>
                             <div class="control">
-                                <button class="button is-light">Annulla</button>
+                                <p class="is-light" onclick="goBack();">Annulla</p>
                             </div>
                         </div>
 
