--- a/app/templates/associations/delete.twig
+++ b/app/templates/associations/delete.twig
@@ -23,7 +23,7 @@
                                 <button class="button is-danger">Elimina</button>
                             </div>
                             <div class="control">
-                                <button class="button">Annulla</button>
+                                <p class="button is-light" onclick="goBack();">Annulla</p>
                             </div>
                         </div>
 
