--- a/app/templates/associations/edit.twig
+++ b/app/templates/associations/edit.twig
@@ -70,7 +70,7 @@
                                 <button class="button is-primary">Modifica</button>
                             </div>
                             <div class="control">
-                                <button class="button is-light">Annulla</button>
+                                <p class="button is-light" onclick="goBack();">Annulla</p>
                             </div>
                         </div>
 
