--- a/app/templates/layouts/main.twig
+++ b/app/templates/layouts/main.twig
@@ -141,17 +141,7 @@
             </div>
         </footer>
 
-        <!--<script src="{#{ baseUrl }#}/assets/js/main.js" async></script>-->
-
-        <script type="text/javascript" async defer>
-            /* Defer the loading of font-awesome that slow down the site */
-            link = document.createElement('link');
-            link.setAttribute('rel', 'stylesheet');
-            link.setAttribute('type', 'text/css');
-            link.setAttribute('href', '{{ baseUrl }}/assets/css/font-awesome.min.css');
-            document.getElementsByTagName('head')[0].appendChild(link);
-        </script>
-
+        <script src="{{ baseUrl }}/assets/js/main.js" async defer></script>
         {% if config.google_analytics_id is defined and config.google_analytics_id %}
         <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
