Add auth-error and italian translation

--- a/app/templates/errors/auth-error.twig
+++ b/app/templates/errors/auth-error.twig
@@ -10,12 +10,11 @@
                 <div class="column"></div>
                 <div class="column is-half">
                     <h1 class="title">Errore</h1>
-                    <h3 class="subtitle">È avvenuto un errore.</h3>
+                    <h3 class="subtitle">Non hai i permessi per compiere questa azione.</h3>
                     <a href="{{ path_for('home')|e('html_attr') }}">Torna all'homepage</a>
                 </div>
                 <div class="column"></div>
             </div>
-
         </div>
     </section>
 {% endblock %}
