--- a/app/templates/errors/not-found.twig
+++ b/app/templates/errors/not-found.twig
@@ -9,9 +9,9 @@
             <div class="columns">
                 <div class="column"></div>
                 <div class="column is-half">
-                    <h1 class="title">Resource not found</h1>
-                    <h3 class="subtitle">Page does not exist.</h3>
-                    <a href="{{ path_for('home')|e('html_attr') }}">Go to homepage</a>
+                    <h1 class="title">Risorsa non trovata</h1>
+                    <h3 class="subtitle">La pagina richiesta non esiste.</h3>
+                    <a href="{{ path_for('home')|e('html_attr') }}">Torna all'homepage</a>
                 </div>
                 <div class="column"></div>
             </div>
