--- a/app/templates/front/panel.twig
+++ b/app/templates/front/panel.twig
@@ -20,6 +20,9 @@
                     <div class="column">
                         <a href="{{ path_for('associations')|e('html_attr') }}" class="button">Gestione associazioni</a>
                     </div>
+                    <div class="column">
+                        <a href="{{ path_for('sponsors')|e('html_attr') }}" class="button">Gestione sponsor</a>
+                    </div>
                     </div>
                 </div>
                 <div class="column"></div>
