--- a/app/templates/front/panel.twig
+++ b/app/templates/front/panel.twig
@@ -23,6 +23,9 @@
                     <div class="column">
                         <a href="{{ path_for('sponsors')|e('html_attr') }}" class="button">Gestione sponsor</a>
                     </div>
+                    <div class="column">
+                        <a href="{{ path_for('fundings')|e('html_attr') }}" class="button">Gestione finanziamenti</a>
+                    </div>
                     </div>
                 </div>
                 <div class="column"></div>
