--- a/app/templates/funding/edit.twig
+++ b/app/templates/funding/edit.twig
@@ -1,7 +1,7 @@
 {% extends "layouts/main.twig" %}
 
-{% block bodyId %}modifica-sponsor{% endblock %}
-{% block metaTitle %}Modifica sponsor{% endblock %}
+{% block bodyId %}modifica-finanziamento{% endblock %}
+{% block metaTitle %}Modifica finanziamento{% endblock %}
 
 {% block content %}
     <section class="section">
@@ -9,13 +9,14 @@
             <div class="columns">
                 <div class="column"></div>
                 <div class="column is-half">
-                    <form action="{{ path_for('sponsorsEdit', {'id':sponsor.idSponsor})|e('html_attr') }}"
+                    <form action="{{ path_for('fundingEdit',
+                        {'eventID':funding.idEvento, 'sponsorID':funding.idSponsor})|e('html_attr') }}"
                           method="post">
                         <div class="field">
-                            <label class="label">Identificatore</label>
+                            <label class="label">Evento</label>
                             <p class="control has-icons-left">
-                                <input class="input" type="text" name="id"
-                                       value="{{ sponsor.idSponsor|e('html_attr') }}"
+                                <input class="input" type="text" name="idEvento"
+                                       value="{{ funding.titolo|e('html_attr') }} (# {{ funding.idEvento|e('html_attr') }})"
                                        readonly>
                                 <span class="icon is-small is-left">
                                     <i class="fa fa-hashtag"></i>
@@ -24,23 +25,41 @@
                         </div>
 
                         <div class="field">
-                            <label class="label">Nome</label>
+                            <label class="label">Sponsor</label>
                             <p class="control has-icons-left">
-                                <input class="input" type="text" name="nome"
-                                       value="{{ sponsor.nome }}">
+                                <input class="input" type="text" name="idSponsor"
+                                       value="{{ funding.nome|e('html_attr') }} (# {{ funding.idSponsor|e('html_attr') }})"
+                                       readonly>
                                 <span class="icon is-small is-left">
-                                    <i class="fa fa-edit"></i>
+                                    <i class="fa fa-hashtag"></i>
                                 </span>
                             </p>
                         </div>
 
+                        <label class="label">Importo</label>
+                        <div class="field has-addons">
+                            <p class="control">
+                                {% if funding.importo is defined %}
+                                    <input class="input" name="importo" type="text" value="{{ funding.importo }}">
+                                {% else %}
+                                    <input class="input" name="importo" type="text" placeholder="0.00" value="">
+                                {% endif %}
+                            </p>
+                            <p class="control">
+                                <a class="button is-static">
+                                    €
+                                </a>
+                            </p>
+                        </div>
+
                         <div class="field">
-                            <label class="label">Logo</label>
+                            <label class="label">Data e ora creazione</label>
                             <p class="control has-icons-left">
-                                <input class="input" type="text" name="logo" value="{{ sponsor.logo }}"
-                                       placeholder="logo.jpg">
+                                <input class="input" type="text" name="dataCreazione"
+                                       value="{{ funding.dataFinanziamento|e('html_attr') }}"
+                                       readonly>
                                 <span class="icon is-small is-left">
-                                    <i class="fa fa-image"></i>
+                                    <i class="fa fa-edit"></i>
                                 </span>
                             </p>
                         </div>
