--- a/app/templates/associations/associations.twig
+++ b/app/templates/associations/associations.twig
@@ -5,34 +5,31 @@
 
 {% block content %}
     <section class="section">
-        <div class="nav-left">
-            <a class="button is-primary" href="{{ path_for('associationsCreate')|e('html_attr') }}">
-                Aggiungi associazione
-            </a>
-        </div>
-        <div class="is-small">&nbsp;</div>
-
-        {% if associazioni|length > 0 %}
-            {% for ass in associazioni %}
-                <div class="box">
-                    <article class="media">
-                        {% if ass.logo != '' %}
-                            <div class="media-left">
-                                <figure class="image is-64x64">
-                                    <img src="{{ baseUrl }}/assets/img/logos/{{ ass.logo }}"
-                                         alt="Logo {{ ass.nomeAssociazione }}">
-                                </figure>
-                            </div>
-                        {% endif %}
-                        <div class="media-content">
-                            <div class="content">
-                                <p>
-                                    <strong>Nome associazione: </strong> {{ ass.nomeAssociazione }}.
-                                </p>
-                            </div>
-                            <div class="is-small">
-                                <div class="">
-                                    <p>
+        <div class="columns">
+            <div class="column"></div>
+            <div class="column is-half">
+                <div class="content">
+                    <a class="button is-primary" href="{{ path_for('associationsCreate')|e('html_attr') }}">
+                        Aggiungi associazione
+                    </a>
+                </div>
+                {% if associazioni|length > 0 %}
+                    {% for ass in associazioni %}
+                        <div class="box">
+                            <article class="media">
+                                {% if ass.logo != '' %}
+                                    <div class="media-left">
+                                        <figure class="image is-64x64">
+                                            <img src="{{ baseUrl }}/assets/img/logos/{{ ass.logo }}"
+                                                 alt="Logo {{ ass.nomeAssociazione }}">
+                                        </figure>
+                                    </div>
+                                {% endif %}
+                                <div class="media-content">
+                                    <div class="content">
+                                        <strong>Nome associazione: </strong> {{ ass.nomeAssociazione }}.
+                                    </div>
+                                    <div class="content">
                                         <strong>
                                             {% if ',' in ass.nomeUtente %}
                                                 Membri:
@@ -47,26 +44,28 @@
                                                 <em>Non ci sono membri.</em>
                                             {% endif %}
                                         </em>
-                                    </p>
+                                    </div>
+                                    <div class="content">
+                                        <a class="button"
+                                           href="{{ path_for('associationsEdit',
+                                            {'id':ass.idAssociazione})|e('html_attr') }}">
+                                            Modifica
+                                        </a>
+                                        <a class="button is-danger"
+                                           href="{{ path_for('associationsDelete',
+                                           {'id':ass.idAssociazione})|e('html_attr') }}">
+                                            Elimina
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="is-small">&nbsp;</div>
-                            <div class="is-small">
-                                <a class="button"
-                                   href="{{ path_for('associationsEdit', {'id':ass.idAssociazione})|e('html_attr') }}">
-                                    Modifica
-                                </a>
-                                <a class="button is-danger"
-                                   href="{{ path_for('associationsDelete', {'id':ass.idAssociazione})|e('html_attr') }}">
-                                    Elimina
-                                </a>
-                            </div>
+                            </article>
                         </div>
-                    </article>
-                </div>
-            {% endfor %}
-        {% else %}
-            <h3><em>Non ci sono associazioni.</em></h3>
-        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    <h3><em>Non ci sono associazioni.</em></h3>
+                {% endif %}
+            </div>
+            <div class="column"></div>
+        </div>
     </section>
 {% endblock %}
