Change history icon

--- a/app/templates/layouts/main.twig
+++ b/app/templates/layouts/main.twig
@@ -58,7 +58,7 @@
                                 {% endif %}
                             {% endif %}
                             <a class="nav-item" href="{{ path_for('history')|e('html_attr') }}">
-                                <i class="fa fa-home"></i>
+                                <i class="fa fa-university"></i>
                                 <span class="nav-item">Storico</span>
                             </a>
                         </div>
