Fix button class in create funding

--- a/app/templates/funding/create.twig
+++ b/app/templates/funding/create.twig
@@ -68,7 +68,7 @@
                                 <button class="button is-primary">Finanzia</button>
                             </div>
                             <div class="control">
-                                <p class="is-light" onclick="goBack();">Annulla</p>
+                                <p class="button is-light" onclick="goBack();">Annulla</p>
                             </div>
                         </div>
 
