--- a/app/templates/events/events.twig
+++ b/app/templates/events/events.twig
@@ -52,6 +52,18 @@
                                 </div>
                             </div>
                             <div class="content">
+                                <div class="">
+                                    <p>
+                                        <strong>
+                                            Associazione primaria:
+                                        </strong>
+                                        <em>
+                                            {{ evento.nomeAssPrimaria }}
+                                        </em>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="content">
                                 <p><strong>Creatore:</strong>
                                     <em>
                                         {{ evento.nomeUtente }} {{  evento.cognomeUtente }} ({{ evento.ruolo }}) - ID: {{ evento.idEvento }}
