--- a/app/templates/errors/error.twig
+++ b/app/templates/errors/error.twig
@@ -15,6 +15,14 @@
                         <div class="content">
                             <pre>{{ err.message }}</pre>
                         </div>
+                        {% if utente.ruolo == 'Amministratore' %}
+                            <div class="content">
+                                <pre>{{ err.debugMessage }}</pre>
+                            </div>
+                            <div class="content">
+                                <pre>{{ err.errorInfo }}</pre>
+                            </div>
+                        {% endif %}
                     {% endif %}
                     <a href="{{ path_for('home')|e('html_attr') }}">Torna all'homepage</a>
                 </div>
