--- a/app/templates/associations/create.twig
+++ b/app/templates/associations/create.twig
@@ -45,6 +45,28 @@
 
                         <div class="is-small">&nbsp;</div>
 
+                        <div class="field is-expanded">
+                            <div class="field has-addons">
+                                <p class="control">
+                                    <a class="button is-static">
+                                        +39
+                                    </a>
+                                </p>
+                                <p class="control is-expanded">
+                                    <input class="input" name="telefono" type="tel" placeholder="Numero di telefono">
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="is-small">&nbsp;</div>
+
+                        <label class="label">Stile:</label>
+                        <div class="field">
+                            <input name="stile" type="color" value="#000000">
+                        </div>
+
+                        <div class="is-small">&nbsp;</div>
+
                         <div class="field is-grouped">
                             <div class="control">
                                 <button class="button is-primary">Crea</button>
