24h format and some small changes

--- a/app/templates/events/page.twig
+++ b/app/templates/events/page.twig
@@ -15,10 +15,10 @@
                                 {{ evento.descrizione }}
                             </h3>
                         <p>
-                            <strong>Inizio: </strong> {{ evento.istanteInizio|date('d/m/Y h:i') }}
+                            <strong>Inizio: </strong> {{ evento.istanteInizio|date('d/m/Y H:i') }}
                         </p>
                         <p>
-                            <strong>Fine: </strong> {{ evento.istanteFine|date('d/m/Y h:i') }}
+                            <strong>Fine: </strong> {{ evento.istanteFine|date('d/m/Y H:i') }}
                         </p>
 
                         <div class="is-small">&nbsp;</div>
