--- a/app/templates/front/home.twig
+++ b/app/templates/front/home.twig
@@ -29,8 +29,8 @@
                                             </a>
                                         </strong>
                                         -
-                                        Inizio: <small>{{ evento.istanteInizio|date('d/m/Y h:i') }}</small>
-                                        - Fine: <small>{{ evento.istanteFine|date('d/m/Y h:i') }}</small>
+                                        Inizio: <small>{{ evento.istanteInizio|date('d/m/Y H:i') }}</small>
+                                        - Fine: <small>{{ evento.istanteFine|date('d/m/Y H:i') }}</small>
                                         <br>
                                         {{ evento.descrizione }}
                                     </p>
