--- a/app/templates/front/page.twig
+++ b/app/templates/front/page.twig
@@ -18,8 +18,8 @@
                     </div>
                     <div class="is-small">&nbsp;</div>
                     <div class="container">
-                        <p><strong>Inizio: </strong>{{ evento.istanteInizio|date('d/m/Y h:i') }}</p>
-                        <p><strong>Fine: </strong>{{ evento.istanteFine|date('d/m/Y h:i') }}</p>
+                        <p><strong>Inizio: </strong>{{ evento.istanteInizio|date('d/m/Y H:i') }}</p>
+                        <p><strong>Fine: </strong>{{ evento.istanteFine|date('d/m/Y H:i') }}</p>
                     </div>
 
                     {% if evento.pagina != '' %}
