--- a/app/templates/events/events.twig
+++ b/app/templates/events/events.twig
@@ -30,7 +30,7 @@
                         <div class="media-content">
                             <div class="content">
                                 <p>
-                                    <strong>{{ evento.titolo }}</strong>. Inizio: <small>{{ evento.istanteInizio|date('d/m/Y h:i') }}</small> - Fine: <small>{{ evento.istanteFine|date('d/m/Y h:i') }}</small>
+                                    <strong>{{ evento.titolo }}</strong>. Inizio: <small>{{ evento.istanteInizio|date('d/m/Y H:i') }}</small> - Fine: <small>{{ evento.istanteFine|date('d/m/Y H:i') }}</small>
                                     <br>
                                     {{ evento.descrizione }}
                                 </p>
@@ -96,7 +96,7 @@
                 </div>
             {% endfor %}
         {% else %}
-            <h3><em>Non ci sono eventi programmati.</em></h3>
+            <h3><em>Non ci sono eventi.</em></h3>
         {% endif %}
     </section>
 {% endblock %}
